replaced DatatypeConverter
javax.xml.bind.DatatypeConverter durch java.util.Base64 ersetzt, um Funktionsfähigkeit mit Java 8+ herzustellen